# detekt-compose-modifier-upgrade

./: CHANGELOG.md  detekt-compose-modifier-upgrade.cabal
app/: Main.hs
src/: MyLib.hs
