cabal-version:      2.4
name:               detekt-compose-modifier-upgrade
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dmitry Suzdalev
maintainer:         mail@dimsuz.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , turtle
                    , foldl
                    , mtl
                    , containers
                    , lens
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable detekt-compose-modifier-upgrade
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        detekt-compose-modifier-upgrade

    hs-source-dirs:   app
    default-language: Haskell2010
